# naive_learning

./: .gitignore  CLAUDE.md  README.md  brain_template.json  clipboard-watcher.js  crawler.js  ebook-digester.js  incremental-learner.js  inference.js  nano-lm.js  nlp.js  package-lock.json  package.json  sandbox-environment.js  seed  server.js
agent_sandbox/: .gitkeep
cli/: Cargo.toml
cli/src/: brain.rs  crawler.rs  file_reader.rs  inference.rs  learner.rs  lib.rs  lm.rs  main.rs  nlp.rs  observer.rs  response_generator.rs
cli/tests/: brain_tests.rs  crawler_tests.rs  file_reader_tests.rs  inference_tests.rs  learner_tests.rs  lm_tests.rs  nlp_tests.rs  observer_tests.rs  response_generator_tests.rs
cli/tests/common/: mod.rs
public/: app.js  index.html  style.css
