[package]
name = "seed-intelligence"
version = "0.1.0"
edition = "2021"
description = "Seed-Intelligence CLI - Hebbian learning based AI"
authors = ["Ye"]

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["full"] }
directories = "5.0"
log = "0.4"
env_logger = "0.11"
once_cell = "1.19"
regex = "1.10"
lazy_static = "1.4"
urlencoding = "2.1"

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "z"